# DATIS

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE.md  Makefile  README.md  test.lua
.cargo/: config.toml
.github/workflows/: rust.yml
crates/datis-cmd/: Cargo.toml  README.md
crates/datis-cmd/src/: main.rs
crates/datis-core/: Cargo.toml
crates/datis-core/src/: config.rs  de.rs  export.rs  extract.rs  ipc.rs  lib.rs  mission_info.rs  rpc.rs  station.rs  utils.rs  weather.rs
crates/datis-core/src/snapshots/: datis_core__station__test__atis_report-2.snap  datis_core__station__test__atis_report.snap
crates/datis-core/src/templates/: atis.xml
crates/datis-core/src/tts/: aws.rs  azure.rs  gcloud.rs  mod.rs  win.rs
crates/datis-module/: Cargo.toml
crates/datis-module/src/: config.rs  lib.rs  mission.rs  mission_info.rs  weather.rs
crates/radio-station/: Cargo.toml  README.md
crates/radio-station/docs/: convert-with-vlc.md
crates/radio-station/src/: main.rs  radio_station.rs
crates/srs/: Cargo.toml
crates/srs/src/: client.rs  lib.rs  message.rs  messages_codec.rs  voice_codec.rs  voice_stream.rs
crates/srsrs/: Cargo.toml  README.md  sample_msgs.json
crates/srsrs/src/: dcs_control.rs  main.rs
crates/win-media/: Cargo.toml
crates/win-media/src/: lib.rs
crates/win-tts/: Cargo.toml  build.rs
crates/win-tts/src/: lib.rs  tts.rs
crates/winrt/: Cargo.toml
crates/winrt/src/: lib.rs
datis/: Cargo.toml
datis-cmd/: Cargo.toml  README.md
datis-cmd/src/: main.rs
datis-core/: Cargo.toml
datis-core/src/: error.rs  lib.rs  polly.rs  srs.rs  station.rs  tts.rs  utils.rs  weather.rs
datis-core/src/tts/: aws.rs  gcloud.rs  mod.rs
datis-module/: Cargo.toml
datis-module/src/: datis.rs  error.rs  lib.rs  macros.rs  mission.rs  weather.rs
datis/src/: datis.rs  error.rs  export.rs  lib.rs  lua_env.lua  macros.rs  srs.rs  station.rs  tts.rs  utils.rs  weather.rs  worker.rs
dewr/: Cargo.toml
dewr/src/: dewr.rs  error.rs  lib.rs
docs/: DCS_ControlAPI.md  Settings.md  Troubleshooting.md
lua/: datis-hook.lua
lua-terrain-mock/: Cargo.toml
lua-terrain-mock/src/: lib.rs
lua5.1/: lua.lib
lua5.1/include/: LICENCE.txt
lua51/: Cargo.toml  build.rs
lua51/src/: lib.rs
mod/: ATIS test.miz
mod/Mods/services/DATIS/: entry.lua
mod/Mods/services/DATIS/Options/: options.dlg  optionsData.lua  optionsDb.lua
mod/Mods/tech/DATIS/: entry.lua
mod/Mods/tech/DATIS/Options/: options.dlg  optionsData.lua  optionsDb.lua
mod/Scripts/Hooks/: datis-hook.lua
scripts/Hooks/: datis-hook.lua
srs/: Cargo.toml
srs/src/: client.rs  lib.rs  main.rs  message.rs  messages_codec.rs  voice_codec.rs  voice_stream.rs
win/win-tts/: Program.cs  win-tts.csproj  win-tts.sln
