[workspace]
# `datis-module` is not part of the workspace on purpose to require Lua 5.1 during development
members = [
    "crates/datis-cmd",
    "crates/datis-core",
    "crates/datis-module",
    "crates/radio-station",
    "crates/srs",
    "crates/win-tts",
]
resolver = "2"

[workspace.package]
version = "3.1.2"
authors = ["Markus Ast <m@rkusa.st>"]
rust-version = "1.85"
edition = "2024"
