[package]
name = "datis-core"
version = "0.9.1"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[dependencies]
base64 = "0.10"
byteorder = "1.2"
log = "0.4"
ogg = "0.7"
reqwest = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srs = { path = "../srs" }
tokio = "0.2.0-alpha.6"
anyhow = "1.0"
