[package]
name = "datis"
version = "0.10.0-beta1"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
const-cstr = "0.3"
datis-core = { path = "../datis-core" }
hlua51 = { git = "https://github.com/rkusa/hlua51.git" }
libc = "0.2"
log = "0.4"
log4rs = "0.8"
lua51-sys = { git = "https://github.com/rkusa/hlua51.git" }
regex = "1"
anyhow = "1.0"
