cargo-features = ["edition"]

[package]
name = "datis"
version = "0.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hlua51 = { path = "../../hlua51/hlua" }
lua51-sys = { path = "../../hlua51/lua51-sys" }
libc = "0.2"
regex = "1"
log = "0.4"
simplelog = "0.5"
const-cstr = "0.1"

byteorder = "1.2"
uuid = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = " 1.0"
ogg = "0.6"
base64 = "0.9"
reqwest = "0.8"