[package]
name = "datis"
version = "0.9.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
hlua51 = { git = "https://github.com/rkusa/hlua51.git" }
lua51-sys = { git = "https://github.com/rkusa/hlua51.git" }
libc = "0.2"
regex = "1"
log = "0.4"
log4rs = "0.8"
const-cstr = "0.1"
byteorder = "1.2"
uuid = "0.6"
serde = "1.0"
serde_json = "1.0"
serde_derive = " 1.0"
ogg = "0.6"
reqwest = "0.8"
futures = "0.1.29"
rusoto_core = "0.40.0"
rusoto_polly = "0.40.0"
rusoto_credential = "0.40.0"
bytes = "0.4.12"
base64 = "0.10.1"
audiopus = "0.1"