[package]
name = "srs"
version = "0.1.0"
authors = ["rkusa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = "0.2.0-alpha.6"
tokio-codec = "0.2.0-alpha.5"
futures-util-preview = "=0.3.0-alpha.19"
base64 = "0.10"
uuid = { version = "0.8", features = ["v4"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytes = "0.4"
log = "0.4"
env_logger = "0.7"
futures-preview = { version = "=0.3.0-alpha.19", features = ["async-await"] }
