[package]
name = "srs"
version = "0.1.0"
authors = ["rkusa"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
base64 = "0.10"
byteorder = "1.3"
bytes = "0.4"
futures-preview = "=0.3.0-alpha.19"
futures-util-preview = "=0.3.0-alpha.19"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = "0.2.0-alpha.6"
tokio-codec = "0.2.0-alpha.5"
tokio-net = "0.2.0-alpha.6"
uuid = { version = "0.8", features = ["v4"] }
log = "0.4"
