[package]
name = "datis-core"
version = "3.1.2"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
audiopus = "0.2"
base64 = "0.13"
bytes = "1.0"
dcs-module-ipc = { version = "0.5", optional = true }
futures = "0.3"
igrf = "0.2"
log = "0.4"
ogg = "0.8"
regex = "1"
reqwest = { version = "0.11", features = ["json"] }
rusoto_core = "0.47"
rusoto_credential = "0.47"
rusoto_polly = "0.47"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
srs = { path = "../srs" }
thiserror = "1.0"
time = { version = "0.3", features = ["parsing"] }
tokio = { version = "1.0", features = ["time", "rt-multi-thread", "sync"] }
uom = { version = "0.31", default-features = false, features = ["f64", "i32", "si", "std", "use_serde"] }

[target.'cfg(target_os = "windows")'.dependencies]
win-tts = { path = "../win-tts" }

[dev-dependencies]
pretty_assertions = "0.7"

[features]
default = []
ipc = ["dcs-module-ipc"]