[package]
name = "datis"
version = "3.0.1"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
datis-core = { path = "../datis-core", features = ["ipc"] }
log4rs = "1.0"
log = "0.4"
mlua = { version = "0.5", default-features = false, features = ["lua51", "module", "serialize"] }
once_cell = "1.4"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"