[package]
name = "datis"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib"]

[dependencies]
datis-core = { path = "../datis-core", features = ["ipc"] }
log4rs = "1.0"
log = "0.4"
mlua = { version = "0.10", default-features = false, features = [
    "error-send",
    "lua51",
    "module",
    "serialize",
] }
once_cell = "1.4"
rand = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
