[package]
name = "dcs-radio-station"
version = "3.1.0"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
async-std = "1.0"
clap = "2.32"
env_logger = "0.8"
futures = "0.3"
log = "0.4"
ogg = "0.8"
ogg_metadata = "0.4"
srs = { path = "../srs" }
tokio = { version = "1.0", features = ["macros", "time", "sync"] }
