[package]
name = "srs"
version = "3.1.2"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2021"
rust-version = "1.56"

[dependencies]
base64 = "0.13"
byteorder = "1.3"
bytes = "1.0"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "1.0"
tokio = { version = "1.0", features = ["time", "net", "sync", "io-util"] }
tokio-util = { version = "0.6", features = ["codec", "net"] }
uuid = { version = "0.8", features = ["v4"] }