[package]
name = "srs"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true

[dependencies]
base64 = "0.22"
byteorder = "1.3"
bytes = "1.0"
futures = "0.3"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_repr = "0.1"
thiserror = "2.0"
tokio = { version = "1.0", features = ["time", "net", "sync", "io-util"] }
tokio-util = { version = "0.7", features = ["codec", "net"] }
uuid = { version = "1.1", features = ["v4"] }
