[package]
name = "srsrs"
version = "1.0.0-alpha.6"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2018"

[dependencies]
clap = "2.32"
ctrlc = "3.1"
datis-core = { path = "../datis-core", features = ["static-weather"] }
dotenv = "0.15"
env_logger = "0.7"
log = "0.4"
srs = {path = "../srs"}
tokio = "0.2.0-alpha.6"
futures-preview="0.3.0-alpha.19"
futures-util-preview="0.3.0-alpha.19"
anyhow = "1.0.20"
audiopus = "0.2.0"
rodio="0.10.0"
serde = "1.0.102"
serde_json = "1.0.41"
