[package]
name = "win-tts"
version = "3.1.2"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.13", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = "0.21"

[target.'cfg(target_os = "windows")'.build-dependencies]
windows = "0.21"
