[package]
name = "win-tts"
version = "3.1.2"
authors = ["Markus Ast <m@rkusa.st>"]
edition = "2021"
rust-version = "1.56"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
thiserror = "1.0"
tokio = { version = "1.23", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.40"
features = [
  "Foundation",
  "Foundation_Collections",
  "Storage_Streams",
  "Media_SpeechSynthesis",
]
