[package]
name = "win-tts"
version.workspace = true
rust-version.workspace = true
authors.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3"
log = "0.4"
thiserror = "2.0"
tokio = { version = "1.0", features = ["rt-multi-thread"] }

[target.'cfg(target_os = "windows")'.dependencies.windows]
version = "0.61"
features = [
    "Foundation",
    "Foundation_Collections",
    "Storage_Streams",
    "Media_Core",
    "Media_SpeechSynthesis",
]

[target.'cfg(target_os = "windows")'.dependencies.windows-future]
version = "0.2"
